--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-multer": "^1.0.2",
     "koa-router": "^10.0.0",
     "koa2-cors": "^2.0.6",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
